# dengine

./: .gitignore  CMakeLists.txt  Doxyfile  Player.h  ReadMe.md  Time.cpp  Time.h  main.cpp  moveassets.bat  vcpkg.json
.github/workflows/: deploy-docs.yml
.run/: Generate Documentation.run.xml  MoveAssets.run.xml  SDL_Learn Full Compile.run.xml  SDL_Learn.run.xml
Game/: BaseLevel.cpp  BaseLevel.h  BaselevelBackground.h  LeafMan.cpp  LeafMan.h  Player.cpp  Player.h
Player/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
System/: Game.cpp  Game.h  Sprite.cpp  Sprite.h  Time.cpp  Time.h
dengine/: .gitignore  CMakeLists.txt  Doxyfile  FAQ.md  LICENSE.md  ReadMe.md  main.cpp  moveassets.bat
dengine/.run/: Generate Documentation.run.xml  MoveAssets.run.xml  dengine Full Compile.run.xml
dengine/Game/: BaseLevel.cpp  BaseLevel.h  BaselevelBackground.cpp  BaselevelBackground.h  LeafMan.cpp  LeafMan.h  Player.cpp  Player.h
dengine/assets/ui/: hud.rml
dengine/game/: BaseLevel.cpp  BaseLevel.h  Hud.cpp  Hud.h  LeafMan.cpp  Player.cpp  Player.h  hud.cpp  hud.h
dengine/game/baseLevel/: BaseLevel.cpp  BaseLevel.h  BaselevelBackground.h
dengine/game/enemies/: LeafMan.h
dengine/include/: RmlUi_Renderer_SDL.h  Universal.h  Vec2.h
dengine/include/Components/: Collider.h  InputController.h  Sprite.h  SpriteSheet.h
dengine/include/System/: AudioManager.h  Camera.h  CameraManager.h  Component.h  EventSystem.h  Game.h  GameLevel.h  GameObject.h  GameSave.h  GameStates.h  Serializable.h  Sound.h  Time.h
dengine/include/UI/: FontManager.h  UI.h  UIComponent.h  UIWindow.h
dengine/include/UI/Components/: Circle.h  FilledCircle.h  HollowRect.h  ProgressBar.h  ProgressBarH.h  ProgressBarV.h  RoundedBox.h  Text.h
dengine/include/Utils/: NanoLog.h  Serializer.h
dengine/lib/: Helpers.cpp  RmlUi_Renderer_SDL.cpp  Serializer.cpp  Vec2.cpp
dengine/lib/Components/: Collider.cpp  InputController.cpp  Sprite.cpp  SpriteSheet.cpp
dengine/lib/System/: AudioManager.cpp  Camera.cpp  CameraManager.cpp  Component.cpp  EventSystem.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  GameState.cpp  Sound.cpp  Time.cpp
dengine/lib/UI/: FontManager.cpp  UI.cpp  UIComponent.cpp  UIWindow.cpp
dengine/lib/UI/Components/: Circle.cpp  FilledCircle.cpp  HollowRect.cpp  ProgressBar.cpp  ProgressBarH.cpp  ProgressBarV.cpp  RoundedBox.cpp  Text.cpp
dengine/lib/Utils/: Serializer.cpp
examples/Game/: BaseLevel.cpp  BaseLevel.h  CMakeLists.txt  LeafMan.cpp  LeafMan.h  Player.cpp  Player.h  main.cpp
examples/Game/Level1/: BaseLevel.cpp  BaseLevel.h  BaselevelBackground.h
examples/Game/TitleScreen/: StartGameButton.cpp  StartGameButton.h  TitleScreen.cpp  TitleScreen.h  TitleScreenBackground.cpp  TitleScreenBackground.h
include/: Vec2.h
include/Components/: Collider.h  InputController.h  Sprite.h  SpriteSheet.h
include/Player/: Character.h  Enemy.h  Player.h
include/System/: AudioManager.h  CameraManager.h  Component.h  EventSystem.h  Game.h  GameLevel.h  GameObject.h  GameStates.h  Sound.h  Sprite.h  Time.h
include/Utils/: NanoLog.h
lib/: Helpers.cpp  Vec2.cpp
lib/Components/: Collider.cpp  InputController.cpp  Sprite.cpp  SpriteSheet.cpp
lib/Player/: Character.cpp  Enemy.cpp  Player.cpp
lib/System/: AudioManager.cpp  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Component.cpp  EventSystem.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  GameState.cpp  Sound.cpp  Sprite.cpp  Time.cpp
lib/Utils/: NanoLog.cpp
packer-util/: CLIArg.cpp  CLIArg.h  CMakeLists.txt  Packer.cpp  Packer.h  ReadMe.md  main.cpp  zlibinstall.bat
